--- a/resource/saved_resource.html
+++ b/resource/saved_resource.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
 <!-- saved from url=(0014)about:internet -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script src="./common.453e2304.js.download" defer="" type="module"></script><script src="./vendor.e5de6554.js.download" defer="" type="module"></script><script src="./bundle.5c19e1fb.js.download" defer="" type="module"></script><title>OnlineHelp scripts</title></head><body></body></html>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>OnlineHelp scripts</title></head><body></body></html>
