--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                                        <div class="et_pb_text_inner">LiveHelp100提供全渠道，并且有智能聊天机器人支持的客户沟通解决方案。我们的一切运营都围绕客户展开。</div>
                                     </div>
                                     <div class="et_pb_button_module_wrapper et_pb_button_0_wrapper et_pb_button_alignment_left et_pb_module et_had_animation" style="">
-                                       <a class="et_pb_button et_pb_button_0 et_hover_enabled et_pb_bg_layout_light" href="#" data-icon="E">立即下载</a>
+                                       <a class="et_pb_button et_pb_button_0 et_hover_enabled et_pb_bg_layout_light" href="#">立即下载</a>
                                     </div>
                                  </div>
                                  <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
