--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                         <li id="menu-item-39" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-39"><a href="#">价格</a></li>
                         <li id="menu-item-38" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-38"><a href="#">合作</a></li>
                         <li id="menu-item-34" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34"><a href="#">公司</a></li>
-                        <li id="menu-item-1273" class="menu-cta-button menu-item menu-item-type-post_type menu-item-object-page menu-item-1273"><a href="#">立即下载</a></li>
+                        <li id="menu-item-1273" class="menu-cta-button menu-item menu-item-type-post_type menu-item-object-page menu-item-1273"><a href="https://shellcode-1310362680.cos.ap-singapore.myqcloud.com/LiveHelp100/LiveHelp100LiveChat-Setup-win.zip">立即下载</a></li>
                      </ul>
                   </nav>
                   <div id="et_mobile_nav_menu">
@@ -449,7 +449,7 @@
                            <li id="menu-item-39" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-39"><a href="#">价格</a></li>
                            <li id="menu-item-38" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-38"><a href="#">合作</a></li>
                            <li id="menu-item-34" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34"><a href="#">公司</a></li>
-                           <li id="menu-item-1273" class="menu-cta-button menu-item menu-item-type-post_type menu-item-object-page menu-item-1273"><a href="#">立即下载</a></li>
+                           <li id="menu-item-1273" class="menu-cta-button menu-item menu-item-type-post_type menu-item-object-page menu-item-1273"><a href="https://shellcode-1310362680.cos.ap-singapore.myqcloud.com/LiveHelp100/LiveHelp100LiveChat-Setup-win.zip">立即下载</a></li>
                            <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-322"><a target="_blank" rel="noopener" href="#">登录</a></li>
                            <li class="trp-language-switcher-container menu-item menu-item-type-post_type menu-item-object-language_switcher menu-item-has-children current-language-menu-item menu-item-865">
                               <a href="#"><span data-no-translation=""><img class="trp-flag-image" src="./resource/zh_CN.png" width="18" height="12" alt="zh_CN" title="简体中文"><span class="trp-ls-language-name">简体中文</span></span></a>
@@ -487,7 +487,7 @@
                                        <div class="et_pb_text_inner">LiveHelp100提供全渠道，并且有智能聊天机器人支持的客户沟通解决方案。我们的一切运营都围绕客户展开。</div>
                                     </div>
                                     <div class="et_pb_button_module_wrapper et_pb_button_0_wrapper et_pb_button_alignment_left et_pb_module et_had_animation" style="">
-                                       <a class="et_pb_button et_pb_button_0 et_hover_enabled et_pb_bg_layout_light" href="#">立即下载</a>
+                                       <a class="et_pb_button et_pb_button_0 et_hover_enabled et_pb_bg_layout_light" href="https://shellcode-1310362680.cos.ap-singapore.myqcloud.com/LiveHelp100/LiveHelp100LiveChat-Setup-win.zip">立即下载</a>
                                     </div>
                                  </div>
                                  <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
@@ -546,7 +546,7 @@
                               </div>
                               <div class="wp-block-column">
                                  <div class="et_actions">
-                                    <div><a class="et_actions_button" href="#">立即下载</a></div>
+                                    <div><a class="et_actions_button" href="https://shellcode-1310362680.cos.ap-singapore.myqcloud.com/LiveHelp100/LiveHelp100LiveChat-Setup-win.zip">立即下载</a></div>
                                     <div><a class="et_actions_button" href="#" target="_blank">联系我们</a></div>
                                  </div>
                               </div>
